# OKR

./: .editorconfig  .eslintrc  .gitignore  Dev Notes.md  LICENSE  LICENSE.md  OKR.code-workspace  README.md  angular.json  package-lock.json  package.json
back-end/: db.sqlite3  manage.py  pyproject.toml  requirements.txt
back-end/.run/: createsuperuser.run.xml  migrate.run.xml
back-end/app/: config.py  database.py  main.py
back-end/app/core/: __init__.py  exceptions.py  logging.py  middleware.py  websockets.py
back-end/app/models/: __init__.py  associations.py  group.py  group_streak.py  keyresult.py  kpi.py  objective.py  organization.py  poll.py  reaction.py  recurring_schedule.py  role.py  user.py
back-end/app/repositories/: __init__.py  base.py  choice.py  group.py  keyresult.py  kpi.py  membership.py  objective.py  organization.py  ownership.py  question.py  reaction.py  recurring.py  role.py  streak.py  user.py
back-end/app/routers/: groups.py  keyresults.py  kpis.py  memberships.py  objectives.py  organizations.py  ownership.py  polls.py  reactions.py  recurring.py  roles.py  (+4 more)
back-end/group/: urls.py
back-end/keyresults/: models.py  serializers.py  urls.py  views.py
back-end/kpi/: models.py  urls.py  views.py
back-end/objectives/: models.py  serializers.py  urls.py  views.py
back-end/polls/: admin.py  tests.py  views.py
back-end/role/: urls.py
back-end/scripts/: seed_data.py
back-end/techniti_okr/: settings.py  wsgi.py
back-end/tests/: conftest.py  test_keyresults.py  test_objectives.py  test_websockets.py
back-end/user/: views.py
(+379 files in other folders)
